# marker_based_docking

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: docking.rviz  dual_reflector_docking.yaml  initial_pose.yaml  mission_points.yaml
launch/: dock_loop_test.launch  docking_marker.launch  docking_marker_constraint.launch  docking_marker_dual.launch  dual_reflector_dock.launch  initial_pose.launch  mission.launch
msg/: DockTarget.msg  DockingStatus.msg
src/: amcl_trail_publisher.cpp  docking_controller.cpp  docking_controller_dual.cpp  dual_reflector_cluster_detector.cpp  dual_reflector_docking_controller.cpp  initial_pose_publisher.cpp  mission_controller.cpp  mission_controller_retry_dock.cpp  reflector_cluster_detector.cpp  reflector_cluster_detector_constraint.cpp  reflector_cluster_detector_dual.cpp
